--- a/LearnProg.html
+++ b/LearnProg.html
@@ -7,21 +7,21 @@
 </head>
 
 <body lang="ar" class="container" >
-    <!-- Header -->
+      <!-- Header -->
     <header class="main-header">
         <div class="navbar">
             <div class="navbar-logo">
-                <a href="/index.html"><img src="Images/Red Logo.png" alt="Logo" height="100" width="150"></a>
+                <a href="/Amr-Academy/index.html"><img src="Images/Red Logo.png" alt="Logo" height="100" width="150"></a>
             </div>
             <ul class="navbar-menu">
-                <li><a href="/index.html">الصفحة الرئيسية</a></li>
-                <li><a href="/signin">تسجيل الدخول</a></li>
+                <li><a href="/Amr-Academy/index.html">الصفحة الرئيسية</a></li>
+                <li><a href="/Amr-Academy/signin">تسجيل الدخول</a></li>
                 <!-- <li><a href="/logout">تسجيل الخروج</a></li> -->
                 <!-- <li><a href="/account">صفحتي</a></li> -->
             </ul>
         </div>
         <div class="header-container">
-            <h1 id="header1">تعلم البرمجة وتطبيقات الهواتف </h1>
+            <h1 id="header1">أكاديمية عمرو لأساسيات البرمجة واللغات</h1>
         </div>
     </header>
     
