--- a/maxMath.html
+++ b/maxMath.html
@@ -3,7 +3,7 @@
 <head>
     <title>حصص للحساب الذهني max math</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="Learn.css">
+    <link rel="stylesheet" href="/Amr-Academy/Learn.css">
 </head>
 
 <body lang="ar" class="container" >
@@ -11,11 +11,11 @@
     <header class="main-header">
         <div class="navbar">
             <div class="navbar-logo">
-                <a href="/index.html"><img src="Images/Red Logo.png" alt="Logo" height="100" width="150"></a>
+                <a href="/Amr-Academy/index.html"><img src="/Amr-Academy/Images/Red Logo.png" alt="Logo" height="100" width="150"></a>
             </div>
             <ul class="navbar-menu">
-                <li><a href="/index.html">الصفحة الرئيسية</a></li>
-                <li><a href="/signin">تسجيل الدخول</a></li>
+                <li><a href="/Amr-Academy/index.html">الصفحة الرئيسية</a></li>
+                <li><a href="/Amr-Academy/signin">تسجيل الدخول</a></li>
                 <!-- <li><a href="/logout">تسجيل الخروج</a></li> -->
                 <!-- <li><a href="/account">صفحتي</a></li> -->
             </ul>
