--- a/Commerce.html
+++ b/Commerce.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" manifest="/cache.appcache">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>معادلة كلية تجارة</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/Amr-Academy/Learn.css">
