--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <p class="arabic-content" style="margin-top: 60px;">أنشطه الأكاديمية</p>
         <ol class="arabic-content" style="list-style: decimal;">
-            <li>تعلم البرمجة وتطبيقات الهواتف <a class="links" href="/Amr-Academy/LearnProg.html" style="padding-right: 200px;">أضغط هنا</a></li>
+            <li>تعلم البرمجة وتطبيقات الهواتف <a class="links" href="/Amr-Academy/LearnProg.html" style="padding-right: 20%;">أضغط هنا</a></li>
             <li>تأسيس لغات (الإنجليزية والفرنسية والإيطالية)<a class="links" href="/Amr-Academy/Languages.html" style="padding-right: 75px;">أضغط هنا</a></li>
             <li>حصص موسيقي<a class="links" href="/Amr-Academy/Music.html" style="padding-right: 347px;"> أضغط هنا</a></li>
             <li>معادلة كلية تجارة<a class="links" href="/Amr-Academy/Commerce.html" style="padding-right: 343px;"> أضغط هنا </a></li>
