--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <main>
         <p class="arabic-content" style="margin-top: 60px;">أنشطه الأكاديمية</p>
         <ol class="arabic-content" style="list-style: decimal;">
-            <li>تعلم البرمجة وتطبيقات الهواتف <a class="links" href="/Amr-Academy/LearnProg.html" style="padding-right: 20%;">أضغط هنا</a></li>
-            <li>تأسيس لغات (الإنجليزية والفرنسية والإيطالية)<a class="links" href="/Amr-Academy/Languages.html" style="padding-right: 5%;">أضغط هنا</a></li>
-            <li>حصص موسيقي<a class="links" href="/Amr-Academy/Music.html" style="padding-right: 25%;"> أضغط هنا</a></li>
-            <li>معادلة كلية تجارة<a class="links" href="/Amr-Academy/Commerce.html" style="padding-right: 25%;"> أضغط هنا </a></li>
-            <li>حصص للحساب الذهني max math<a class="links" href="/Amr-Academy/maxMath.html" style="padding-right: 5%;">أضغط هنا </a></li>
+            <li>تعلم البرمجة وتطبيقات الهواتف. <a class="links" href="/Amr-Academy/LearnProg.html" style="padding-right: 20%;">أضغط هنا</a></li>
+            <li>تأسيس لغات (الإنجليزية والفرنسية والإيطالية).<a class="links" href="/Amr-Academy/Languages.html" style="padding-right:9.5%;">أضغط هنا</a></li>
+            <li>حصص موسيقي.<a class="links" href="/Amr-Academy/Music.html" style="padding-right: 32.5%;">أضغط هنا </a></li>
+            <li>معادلة كلية تجارة.<a class="links" href="/Amr-Academy/Commerce.html" style="padding-right: 32%;">أضغط هنا</a></li>
+            <li>حصص للحساب الذهني max math.<a class="links" href="/Amr-Academy/maxMath.html" style="padding-right: 17.5%;">أضغط هنا</a></li>
         </ol>
     </main>
     
