--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
         <div class="navbar">
             <div class="navbar-logo">
-                <a href="/Amr-Academy/index.html"><img src="/Amr-Academy/Images/Red Logo.png" alt="Logo" height="100" width="150"></a>
+                <a href="/Amr-Academy/index.html"><img src="/Amr-Academy/Images/Red Logo.png" alt="Logo" ></a>
             </div>
             <ul class="navbar-menu">
                 <li><a href="/Amr-Academy/index.html">الصفحة الرئيسية</a></li>
@@ -28,7 +28,7 @@
     
     <!-- Main Content -->
     <main>
-        <p class="arabic-content" style="margin-top: 60px;">أنشطه الأكاديمية</p>
+        <p class="arabic-content" >أنشطه الأكاديمية</p>
         <ol class="arabic-content" style="list-style: decimal;">
             <li>تعلم البرمجة وتطبيقات الهواتف. <a class="links" id="link1" href="/Amr-Academy/LearnProg.html" >أضغط هنا</a></li>
             <li>تأسيس لغات (الإنجليزية والفرنسية والإيطالية).<a class="links" id="link2" href="/Amr-Academy/Languages.html" >أضغط هنا</a></li>
