resposive code updated

--- a/LearnProg.html
+++ b/LearnProg.html
@@ -30,9 +30,11 @@
     <main>
     <div class="arabic-content">
         <h3 style="margin-right: 40px;">كورس سكراتش (Scratch)</h3>
-        <pre class="arabic-content">
-            برنامج سكراتش هو واحد من لغات البرمجة السهلة البسيطة والموجه في الأصل للمبتدئين
-            والأطفال في مراحل التعليم الأساسي لذلك تم اعتماده من وزارات التربية والتعليم في
+        <p class="arabic-content">
+            برنامج سكراتش هو واحد من لغات البرمجة السهلة
+            البسيطة والموجه في الأصل للمبتدئين والأطفال
+            في مراحل التعليم الأساسي لذلك تم اعتماده
+            من وزارات التربية والتعليم في
             كثير من الدول حول العالم كجزء من المناهج المعتمدة التي يتم تدريسها للأطفال في
             مرحلة التعليم المبكر والأساسي.
             سكراتش هي لغة برمجة مخصصة للأطفال بسيطة وسهلة ولا تحتاج إلى تعقيدات الأكواد.
@@ -42,7 +44,7 @@
             في برنامج السكراتش يمكن تطوير قصصٍ تفاعلية، ورسومٍ متحركة، وألعابٍ موسيقية وفنية،
             وغيرها من الإبداعات حيث يمكن البرنامج المستخدم من إدخال صور أو أصوات وإجراء
             تغييرات عليها والتحكم
-        </pre>
+        </p>
         <h4 style="margin-right: 75px; color: brown;">المحتوي:</h4>
         <ul  style="margin-right: 85px;" >
             <li>تطوير مهارات البرمجة والتفكير الحسابي :</li>
@@ -59,11 +61,11 @@
 
     <div class="arabic-content">
         <h3 style="margin-right: 40px;">كورس تصميم صفحات الويب (Web page design) </h3>
-        <pre class="arabic-content">
+        <p class="arabic-content">
             تصميم موقع بلغة html و css جاهز مقدمة في العصر الرقمي الحالي، أصبح وجود موقع ويب أمرًا ضروريًا لأي نشاط
             تجاري أو شخصي. ومع أن هناك العديد من الأدوات والمنصات التي تسهل إنشاء المواقع، إلا أن تعلم أساسيات HTML 
             وCSS يمنحك فهمًا أعمق لكيفية عمل مواقع الويب، ويمكّنك من تخصيص تصميمك بحرية أكبر
-        </pre>
+        </p>
         <h4 style="margin-right: 75px;color: brown;">المحتوي:</h4>
         <ul  style="margin-right: 85px;" >
             <li>
@@ -180,12 +182,12 @@
 
     <div class="arabic-content">
         <h3 style="margin-right: 40px;">كورس الذكاء الإصطناعي (AI) </h3>
-        <pre class="arabic-content">
+        <p class="arabic-content">
             مرحباً بكم في كورس الذكاء الاصطناعي للأطفال! في هذا الكورس الممتع والمليئ بالتحديات،
             سنستكشف معًا عالم الذكاء الاصطناعي (AI) باستخدام برنامج PictoBlox AI.
             يهدف هذا الكورس إلى تقديم مفاهيم الذكاء الاصطناعي بطريقة بسيطة وسهلة للأطفال،
             وتطوير مهاراتهم البرمجية والإبداعية.
-        </pre>
+        </p>
         <h4 style="margin-right: 75px;color: brown;">المحتوي:</h4>
         <ul  style="margin-right: 85px;" >
             <li>
